RESOLVED FIXED92347
[EFL] Memory leaks in EFL DRT
https://bugs.webkit.org/show_bug.cgi?id=92347
Summary [EFL] Memory leaks in EFL DRT
Sudarsana Nagineni (babu)
Reported 2012-07-26 01:12:40 PDT
Valgrind reports this leak on every test run. ==17315== 62 (24 direct, 38 indirect) bytes in 1 blocks are definitely lost in loss record 3,130 of 5,387 ==17315== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==17315== by 0x5884252: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==17315== by 0x5559334: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==17315== by 0x556AA94: OpaqueJSString::create(unsigned short const*, unsigned int) (OpaqueJSString.h:46) ==17315== by 0x556A7A9: JSStringCreateWithUTF8CString (JSStringRef.cpp:50) ==17315== by 0x478A22: DumpRenderTreeChrome::onWindowObjectCleared(void*, _Evas_Object*, void*) (DumpRenderTreeChrome.cpp:449) ==17315== by 0x41013C2: evas_object_smart_callback_call (evas_object_smart.c:472) ==17315== by 0xC9B35CB: WebCore::FrameLoaderClientEfl::dispatchDidClearWindowObjectInWorld(WebCore::DOMWrapperWorld*) (FrameLoaderClientEfl.cpp:443) ==17315== by 0x8F99A32: WebCore::FrameLoader::dispatchDidClearWindowObjectInWorld(WebCore::DOMWrapperWorld*) (FrameLoader.cpp:3135) ==17315== by 0x9645185: WebCore::ScriptController::initScript(WebCore::DOMWrapperWorld*) (ScriptController.cpp:223) ==17315== by 0x89E843A: WebCore::ScriptController::windowShell(WebCore::DOMWrapperWorld*) (ScriptController.h:77) ==17315== by 0x9644B7E: WebCore::ScriptController::evaluateInWorld(WebCore::ScriptSourceCode const&, WebCore::DOMWrapperWorld*) (ScriptController.cpp:131) ==17315== by 0x9644DAB: WebCore::ScriptController::evaluate(WebCore::ScriptSourceCode const&) (ScriptController.cpp:162) ==17315== by 0x8C63041: WebCore::ScriptElement::executeScript(WebCore::ScriptSourceCode const&) (ScriptElement.cpp:300) ==17315== by 0x8C62902: WebCore::ScriptElement::prepareScript(WTF::TextPosition const&, WebCore::ScriptElement::LegacyTypeSupport) (ScriptElement.cpp:240) ==17315== by 0x8E4818B: WebCore::HTMLScriptRunner::runScript(WebCore::Element*, WTF::TextPosition const&) (HTMLScriptRunner.cpp:290) ==17315== by 0x8E477C4: WebCore::HTMLScriptRunner::execute(WTF::PassRefPtr<WebCore::Element>, WTF::TextPosition const&) (HTMLScriptRunner.cpp:170) ==17315== by 0x8E392E2: WebCore::HTMLDocumentParser::runScriptsForPausedTreeBuilder() (HTMLDocumentParser.cpp:200) ==17315== by 0x8E39394: WebCore::HTMLDocumentParser::canTakeNextToken(WebCore::HTMLDocumentParser::SynchronousMode, WebCore::PumpSession&) (HTMLDocumentParser.cpp:217) ==17315== by 0x8E397AC: WebCore::HTMLDocumentParser::pumpTokenizer(WebCore::HTMLDocumentParser::SynchronousMode) (HTMLDocumentParser.cpp:254) ==17315== by 0x8E3918F: WebCore::HTMLDocumentParser::pumpTokenizerIfPossible(WebCore::HTMLDocumentParser::SynchronousMode) (HTMLDocumentParser.cpp:173) ==17315== by 0x8E39D47: WebCore::HTMLDocumentParser::append(WebCore::SegmentedString const&) (HTMLDocumentParser.cpp:361) ==17315== by 0x8B8BDC0: WebCore::DecodedDataDocumentParser::flush(WebCore::DocumentWriter*) (DecodedDataDocumentParser.cpp:60) ==17315== by 0x8F818D8: WebCore::DocumentWriter::end() (DocumentWriter.cpp:238) ==17315== by 0x8F723BC: WebCore::DocumentLoader::finishedLoading() (DocumentLoader.cpp:300) ==17315== by 0x8FAA7BC: WebCore::MainResourceLoader::didFinishLoading(double) (MainResourceLoader.cpp:520) ==17315== by 0x8FBC654: WebCore::ResourceLoader::didFinishLoading(WebCore::ResourceHandle*, double) (ResourceLoader.cpp:436) ==17315== by 0x9A61013: WebCore::readCallback(_GObject*, _GAsyncResult*, void*) (ResourceHandleSoup.cpp:865) ==17315== by 0xF80BA44: async_ready_callback_wrapper (ginputstream.c:529) ==17315== by 0xF820BAC: g_simple_async_result_complete (gsimpleasyncresult.c:767) ==17315== by 0xF820C47: complete_in_idle_cb_for_thread (gsimpleasyncresult.c:835) ==17315== by 0xDA8B6E2: g_main_context_dispatch (gmain.c:2539) ==17315== by 0x41F236D: _ecore_glib_select (ecore_glib.c:171) ==17315== by 0x41EC8E0: _ecore_main_select (ecore_main.c:1370) ==17315== by 0x41ED374: _ecore_main_loop_iterate_internal (ecore_main.c:1786) ==17315== by 0x41ED676: ecore_main_loop_begin (ecore_main.c:931) ==17315== by 0x47459F: runTest(char const*) (DumpRenderTree.cpp:297) ==17315== by 0x474DC9: main (DumpRenderTree.cpp:463)
Attachments
Patch (1.70 KB, patch)
2012-07-26 23:37 PDT, Sudarsana Nagineni (babu)
no flags
Sudarsana Nagineni (babu)
Comment 1 2012-07-26 23:37:52 PDT
WebKit Review Bot
Comment 2 2012-07-27 01:41:42 PDT
Comment on attachment 154854 [details] Patch Clearing flags on attachment: 154854 Committed r123851: <http://trac.webkit.org/changeset/123851>
WebKit Review Bot
Comment 3 2012-07-27 01:41:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.