[EFL] Memory leaks in EFL DRT https://bugs.webkit.org/show_bug.cgi?id=92347

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-07-27
Reviewed by Simon Hausmann.

Fix a memory leak in EFL's DRT code by adopting an allocation
of JSString created with JSStringCreateWithUTF8CString.

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::onWindowObjectCleared):

Canonical link: https://commits.webkit.org/110286@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123851 268f45cc-cd09-0410-ab3c-d52691b4dbfc